[package]
name = "http_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.16",features=["full"]}
tokio={version="1",features=["full"]}
hyper-rustls = "0.22"
futures-util = "0.3.19"
anyhow = "1.0.37"

